--- a/SpringExercise/pom.xml
+++ b/SpringExercise/pom.xml
@@ -9,9 +9,26 @@
   <url>http://maven.apache.org</url>
   <dependencies>
 
+    <!--junit-->
+    <!-- https://mvnrepository.com/artifact/junit/junit -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.8.1</version>
+    </dependency>
 
   </dependencies>
   <build>
     <finalName>zhuxinquan</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
